styles.css
body {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 20px;
    display: flex;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.main-section {
    background: #1F2937;
    padding: 20px 300px;
}

.logo {
    font-size: 36px;
    color: #F9FAF8;
    font-weight: 700;
}

.header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 150px;
}

.content img {
    width: 720px;
}

.content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 150px;
}

.text {
    width: 450px;
}

.text .main-text {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin-bottom: 16px;
}

.text .sub-text {
    font-size: 18px;
    color: #F9FAF8;
    margin-bottom: 16px;
}

.content button {
    padding: 8px 36px;
    background-color: rgb(36, 140, 238);
    color: white;
    border-radius: 5px;
    font-size: 16px;
    flex-grow: 0;
    border: none;
    font-weight: 700;
} 

.title {
    font-size: 36px;
    font-weight: 800;
    text-align: center;
    margin-bottom: 50px;
    margin-top: 60px;
}

.cat img {
    width: 200px;
    height: 300px;
    object-fit: fill;
    border: 5px solid skyblue;
    border-radius: 20px;
    margin-bottom: 10px;
    
}

.trivia-section {
    display: flex;
    justify-content: center;
    gap: 85px;
}

.cat {
    max-width: 200px;
    text-align: center;
    margin-bottom: 150px;
}

.quote-section {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    padding: 20px 300px;
    gap: 50px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1F2937;
    margin-top: 150px;
    width: 800px;
    align-self:center;
    text-align: center;
}

.author {
    margin-bottom: 150px;
    align-self: flex-end;
    padding-right: 250px;
    font-size: 18px;
    font-weight: bold;
}

.signup-section {
    display: flex;
    margin: 150px 350px;
    background-color: #3882F6;
    padding: 75px 200px;
    border-radius: 8px;
    justify-content: space-between;
    align-items: center;
}

.signup-section .texts, .signup-section button {
    color: white;
}

.signup-section .main-text {
    font-size: 28px;
    font-weight: 700;
    margin-bottom: 10px;
}

.signup-section button {
    background-color: transparent;
    border: 2px solid white;
    border-radius: 7px;
    font-size: 16px;
    padding: 5px 30px;
    font-weight: bold;
}

.footer {
    padding: 50px;
    background-color: #1F2937;
    color: #F9FAF8;
    text-align: center;
}

